--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
         "build": "elm-land build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.3",
-        "@tailwindcss/typography": "^0.5.8",
-        "autoprefixer": "^10.4.13",
-        "cssnano": "^5.1.14",
-        "elm": "^0.19.1-5",
-        "elm-format": "^0.8.5",
-        "elm-land": "*",
-        "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.4",
-        "vite": "^4.1.0-beta.2"
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "autoprefixer": "^10.4.16",
+        "cssnano": "^6.0.2",
+        "elm": "^0.19.1-6",
+        "elm-format": "^0.8.7",
+        "elm-land": "^0.19.4",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0",
+        "vite": "^4.5.1"
     }
 }
